# jtalk.py

./: README.md  gen_eng_yomi_data.py  jtalk.py  jtalkpy_eng_yomi_data.tsv  setup.cfg
jtalk_py/: __init__.py  jtalk.py
