[metadata]
name = jtalk.py
version = attr: jtalk_py.version.__version__
description = A text-to-speech cli tool for Japanese text
url = https://github.com/tos-kamiya/jtalk.py

[options]
packages = find:
install_requires = 
    docopt
    alkana.py==0.0.1

[options.entry_points]
console_scripts = jtalk.py = jtalk_py:main
