[metadata]
name = jtalk.py
version = 0.2.2
description = A text-to-speech cli tool for Japanese text
url = https://github.com/tos-kamiya/jtalk.py

[options]
packages = find:
install_requires = 
    docopt
    alkana.py==0.0.1
    markdown
    bs4

[options.entry_points]
console_scripts = jtalk.py = jtalk_py:main
